# django-migration-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: github_release.yml  package_builder.yml  publish_to_pypi.yml  publish_to_test_pypi.yml
inspector/: apps.py  utils.py
inspector/management/commands/: checkmigrations.py
src/inspector/management/commands/: constants.py  inspectmigrations.py
