[project]
name = "django-migration-inspector"
version = "0.0.3"
authors = [
  { name="Samarth Parnami", email="samarthparnami@gmail.com" },
]
description = "Django extension to inspect validity of migration files"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
  "django>=3.2.0"
]

[project.urls]
Homepage = "https://github.com/SamarthParnami/django-migration-inspector"
Issues = "https://github.com/SamarthParnami/django-migration-inspector/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
django = ">=3.2.0"
